--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -3,3 +3,4 @@ guides:
   - arbitrum-nitro-arbitrum-university-560.yaml
   - introduction-to-stylus-arbitrum-university-536.yaml
   - arbitrum-orbit-arbitrum-university-525.yaml
+  - arbitrum-rollup-arbitrum-university-178.yaml
