update guide Arbitrum Nova

--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -4,3 +4,4 @@ guides:
   - introduction-to-stylus-arbitrum-university-536.yaml
   - arbitrum-orbit-arbitrum-university-525.yaml
   - arbitrum-rollup-arbitrum-university-178.yaml
+  - arbitrum-nova-arbitrum-university-144.yaml
