--- a/src/guides/main/arbitrum-nova-arbitrum-university-144.yaml
+++ b/src/guides/main/arbitrum-nova-arbitrum-university-144.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Arbitrum Nova: Enhanced scalability with AnyTrust verification.'
-created: '2023-11-01T18:48:11.585Z'
+created: '2023-11-01T18:51:42.460Z'
 guideType: onboarding
 key: arbitrum-nova-arbitrum-university-144
 name: Arbitrum Nova
@@ -107,7 +107,7 @@ steps:
       recovered later by anyone given only the Keyset hash.
 
 
-      ## Benefits of Nova
+      ## Purpose of AnyTrust
 
 
       #### Lowering Costs and Improving Efficiency
@@ -175,7 +175,67 @@ steps:
     name: Evaluation
     stepItems: []
     uuid: c7e781c8-65cb-4190-bd76-26c6ef3756c1
-  - content: ''
+  - content: >-
+      ## Overview of Data Availability Servers (DAS)
+
+
+      #### Sequencer API: Submitting Data Blocks for Storage
+
+
+      The Sequencer API is a JSON-RPC interface specifically designed for the
+      Arbitrum chain's Sequencer. Its primary function is to allow the Sequencer
+      to submit data blocks to the Data Availability Servers (DAS) for storage.
+      This API is meant to be accessed exclusively by the Sequencer, and
+      deployments typically restrict access to other callers. By utilizing the
+      Sequencer API, the DAS ensures that only authorized entities can submit
+      data blocks for storage, enhancing security and data integrity.
+
+
+      #### REST API: Fetching Data Blocks by Hash
+
+
+      In contrast to the Sequencer API, the REST API is intended to be available
+      to the world. It is a RESTful HTTP(S) based protocol that enables users to
+      fetch data blocks by their respective hash values. This API is fully
+      cacheable, meaning that deployments can leverage caching proxies or
+      Content Delivery Networks (CDNs) to enhance scalability and protect
+      against Denial of Service (DoS) attacks. By making data blocks accessible
+      through the REST API, the DAS ensures that users can retrieve specific
+      data blocks efficiently and securely.
+
+
+      Flexible Data Storage Options
+
+      The DAS software offers a range of configuration options for storing data.
+      Depending on the deployment's requirements, the software can store data in
+      local files, a Badger database, Amazon S3, or redundantly across multiple
+      backing stores. This flexibility allows deployments to choose the storage
+      solution that best suits their needs, whether it's leveraging existing
+      infrastructure or utilizing cloud-based storage services. By providing
+      multiple storage options, the DAS ensures that deployments can optimize
+      data availability and durability according to their specific requirements.
+
+
+      Optional Caching for Improved Performance
+
+      To further enhance performance, the DAS software supports optional caching
+      mechanisms. It can cache data in memory using Bigcache or in a Redis
+      instance. By caching data, the DAS minimizes the need for repeated data
+      retrieval, improving response times and overall system efficiency. This
+      optional caching feature is particularly beneficial for deployments that
+      require frequent access to specific data blocks, as it reduces the
+      reliance on disk-based storage and accelerates data retrieval.
+
+
+      In conclusion, Data Availability Servers (DAS) play a crucial role in
+      ensuring the availability and accessibility of data blocks. The Sequencer
+      API enables authorized entities, specifically the Arbitrum chain's
+      Sequencer, to submit data blocks for storage securely. On the other hand,
+      the REST API allows users worldwide to fetch data blocks by their hash
+      values, promoting efficient and secure data retrieval. With flexible
+      storage options and optional caching mechanisms, the DAS software empowers
+      deployments to optimize data availability, durability, and performance
+      according to their specific needs.
     name: 'Data Availability Servers '
     stepItems: []
     uuid: 6a3dea00-4a8f-43d6-9d9f-18a8476f1520
