update guide Arbitrum Bridge

--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -5,3 +5,4 @@ guides:
   - arbitrum-orbit-arbitrum-university-525.yaml
   - arbitrum-nova-arbitrum-university-144.yaml
   - arbitrum-one-arbitrum-university-177.yaml
+  - arbitrum-bridge-arbitrum-university-959.yaml
