update guide Arbitrum Bridge

--- a/src/guides/main/arbitrum-bridge-arbitrum-university-959.yaml
+++ b/src/guides/main/arbitrum-bridge-arbitrum-university-959.yaml
@@ -1,21 +1,60 @@
 categories: []
 content: 'Arbitrum Bridge: Seamless L1 to L2 Asset Transfer'
-created: '2023-11-02T16:16:05.166Z'
+created: '2023-11-02T16:23:23.033Z'
 guideType: onboarding
 key: arbitrum-bridge-arbitrum-university-959
 name: 'Arbitrum Bridge '
 publishStatus: Live
 steps:
-  - content: |-
+  - content: >-
+      ## What is a Blockchain Bridge?
 
-      Introduction Comments 
-              
+
+      A blockchain bridge is a protocol that connects two separate blockchain
+      networks, allowing for the exchange of tokens and information between
+      them. It acts as a link or a bridge that enables cross-chain interactions,
+      making the blockchain world more interconnected and collaborative.
+
+
+      There are various types of blockchain bridges, but most popular ones
+      support a wide range of assets and multiple blockchains. They typically
+      charge a small fee for the transfer, usually ranging from 0.01% to 0.05%
+      of the bridged amount. However, some bridges, especially official ones,
+      have zero fees besides the gas costs.
+
+
+      The process of transferring assets through a blockchain bridge usually
+      involves a lock and mint <-> burn and unlock system. The bridge locks the
+      assets on the source chain, then mints an equivalent number of wrapped
+      assets on the destination chain. These wrapped assets can be burned to
+      unlock the original assets on the source chain.
+
+
+      ## Benefits of Blockchain Bridge
+
+
+      #### Creating Interoperable Blockchain Ecosystem
+
+
+      The main purpose of a blockchain bridge is to create an interoperable
+      blockchain ecosystem, where different networks can communicate and work
+      together. Before the introduction of bridges, each blockchain operated
+      independently, and users had to maintain balances on each blockchain they
+      wanted to interact with. This meant holding assets and gas tokens on
+      multiple chains, which was inconvenient and inefficient.
+
+
+      #### No Requirement for Centralized Intermediary
+
+
+      With a blockchain bridge, users can seamlessly move assets from one chain
+      to another without the need for a centralized intermediary. The bridge
+      ensures that the supply of tokens remains constant across both networks
+      during the transfer process. This allows for greater flexibility and
+      expands the capabilities of tokens, as they can now migrate across
+      different blockchain networks.
     name: Blockchain Bridge
-    stepItems:
-      - label: Full Name
-        required: false
-        type: PublicShortInput
-        uuid: 7c89204f-9032-460b-89bb-c5190da1bb22
+    stepItems: []
     uuid: 68eec6db-69ca-4477-8c76-00c8f4200dcb
   - content: ''
     name: Evaluation
@@ -76,6 +115,6 @@ steps:
     uuid: 095de5d0-5e63-480e-9e09-2e4c4e5e57e9
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
-uuid: 656734a8-35dd-460c-9b26-352840166e86
+uuid: arbitrum-bridge-arbitrum-university-959
 version: 1
 priority: 50
