--- a/src/guides/main/arbitrum-bridge-arbitrum-university-959.yaml
+++ b/src/guides/main/arbitrum-bridge-arbitrum-university-959.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Arbitrum Bridge: Seamless L1 to L2 Asset Transfer'
-created: '2023-11-02T16:23:23.033Z'
+created: '2023-11-02T16:54:30.282Z'
 guideType: onboarding
 key: arbitrum-bridge-arbitrum-university-959
 name: 'Arbitrum Bridge '
@@ -81,7 +81,54 @@ steps:
         uuid: ba884930-760e-425c-9a57-c7706f464444
         explanation: Explanation of the question
     uuid: 059345d4-d9d4-4b9f-b0fd-2b72e8812a73
-  - content: ''
+  - content: >-
+      ## Arbitrum Bridge
+
+
+      The Arbitrum Bridge is a decentralized application (DApp) created by
+      Offchain Labs to solve a major problem in the blockchain world:
+      transferring assets between the Ethereum main network (Layer 1) and its
+      Layer 2 counterpart, Arbitrum One. This bridge acts as a crucial link,
+      enabling assets to move seamlessly between these two layers while
+      maintaining interoperability.
+
+
+      ## Purpose of Arbitrum Bridge
+
+
+      #### Facilitating Asset Transfers
+
+
+      The Arbitrum Bridge plays a central role in facilitating the transfer of
+      assets between Ethereum and the Arbitrum One network. Users can deposit
+      their ETH or ERC-20 tokens into the bridge contract on Ethereum's Layer 1.
+      These assets are then locked, and an equivalent amount is minted on the
+      Arbitrum network's Layer 2. The bridge acts as a custodian, ensuring the
+      security and integrity of the assets during the transition.
+
+
+      #### Moving Computational Work
+
+
+      The Arbitrum bridge operates by moving most of the computational work off
+      the Ethereum network (Layer 1) while still maintaining the security
+      guarantees of this decentralized blockchain. When a user wants to transfer
+      their assets from Ethereum to Arbitrum, they interact with the Arbitrum
+      bridge. This process utilizes 'roll-up' technology, which batches multiple
+      transactions into a single one, resulting in improved scalability and
+      reduced gas fees.
+
+
+      #### Withdrawals and Dispute Period
+
+
+      When a user wishes to withdraw their assets from Arbitrum back to
+      Ethereum, the tokens on the Arbitrum network are burned, and the
+      previously locked assets on Ethereum are released. However, it's important
+      to note that Arbitrum employs a security mechanism called the "dispute
+      period" for withdrawals. This means that withdrawals are delayed for
+      approximately one week to allow the Layer 2 network's state to be
+      challenged and verified on Ethereum before the funds are released.
     name: What is Arbitrum Bridge?
     stepItems: []
     uuid: e57a1b9d-454b-49bf-a296-8e6a40ff692e
