--- a/src/guides/main/arbitrum-bridge-arbitrum-university-959.yaml
+++ b/src/guides/main/arbitrum-bridge-arbitrum-university-959.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Arbitrum Bridge: Seamless L1 to L2 Asset Transfer'
-created: '2023-11-02T16:57:53.757Z'
+created: '2023-11-02T17:14:02.001Z'
 guideType: onboarding
 key: arbitrum-bridge-arbitrum-university-959
 name: 'Arbitrum Bridge '
@@ -16,18 +16,18 @@ steps:
       making the blockchain world more interconnected and collaborative.
 
 
-      There are various types of blockchain bridges, but most popular ones
-      support a wide range of assets and multiple blockchains. They typically
-      charge a small fee for the transfer, usually ranging from 0.01% to 0.05%
-      of the bridged amount. However, some bridges, especially official ones,
-      have zero fees besides the gas costs.
-
-
       The process of transferring assets through a blockchain bridge usually
       involves a lock and mint <-> burn and unlock system. The bridge locks the
       assets on the source chain, then mints an equivalent number of wrapped
       assets on the destination chain. These wrapped assets can be burned to
       unlock the original assets on the source chain.
+
+
+      There are various types of blockchain bridges, but most popular ones
+      support a wide range of assets and multiple blockchains. They typically
+      charge a small fee for the transfer, usually ranging from 0.01% to 0.05%
+      of the bridged amount. However, some bridges, especially official ones,
+      have zero fees besides the gas costs.
 
 
       ## Benefits of Blockchain Bridge
@@ -200,7 +200,118 @@ steps:
     name: Evaluation
     stepItems: []
     uuid: 69bb080d-7af7-4261-b5e5-52ea3feb5d31
-  - content: ''
+  - content: >-
+      The Arbitrum bridge allows users to transfer their funds between different
+      chains, such as Ethereum and Arbitrum One. This process, known as
+      bridging, involves depositing funds from a parent chain to a child chain
+      or withdrawing funds from a child chain to a parent chain. In this guide,
+      we will provide a step-by-step process for both depositing and withdrawing
+      funds using the Arbitrum bridge.
+
+
+      ## Depositing Funds
+
+
+      #### Install a web3 wallet
+
+
+      Before you can start the bridging process, you need to have a web3 wallet
+      installed. This will allow you to interact with the bridge and initiate
+      the transfer of funds.
+
+
+      #### Obtain the native currency of the parent chain
+
+
+      To bridge your assets from one chain to another, you need to have the
+      native currency of the parent chain. For example, if you want to bridge
+      assets from Ethereum to Arbitrum One, you'll need ETH on Ethereum to
+      initiate the process.
+
+
+      #### Connect to the desired chain
+
+
+      Add the desired chain's RPC endpoint to your wallet. For example, if you
+      want to bridge funds to Arbitrum One, you need to add the Arbitrum One RPC
+      endpoint to your wallet.
+
+
+      #### Visit the Arbitrum bridge website
+
+
+      Go to bridge.arbitrum.io and log in with your web3 wallet. Make sure you
+      are connected to the source network (the chain from where you want to
+      deposit your assets).
+
+
+      #### Select the destination network
+
+
+      Choose the destination network where you want your assets to go. This
+      could be Arbitrum One or another compatible chain.
+
+
+      #### Enter the amount and initiate the transfer
+
+
+      Enter the amount of ETH or ERC-20 tokens you want to bridge in the "From"
+      box and click on the "Move funds" button. Make sure you have enough ETH in
+      your wallet to pay for the transaction.
+
+
+      #### Wait for the funds to arrive
+
+
+      After submitting the transaction through your web3 wallet, you can expect
+      your funds to arrive on the destination chain within approximately 15-30
+      minutes, depending on the network congestion. Make sure your wallet is set
+      to the destination chain to see your funds when they arrive.
+
+
+      ## Withdrawing Funds
+
+
+      #### Log in to the Arbitrum bridge
+
+
+      Make sure you are logged in to the Arbitrum bridge with your web3 wallet.
+      Connect to the source network (the chain from where you want to withdraw
+      your assets).
+
+
+      #### Select the destination network
+
+
+      Choose the destination network where you want your assets to go. For
+      example, if you want to withdraw funds to Ethereum mainnet, select
+      Ethereum mainnet as the destination network.
+
+
+      #### Enter the amount and initiate the withdrawal
+
+
+      Enter the amount of ETH or ERC-20 tokens you want to bridge in the "From"
+      box and click on the "Move funds" button. Ensure that you have enough ETH
+      in your wallet to cover the transaction fees.
+
+
+      #### Wait for the withdrawal period
+
+
+      Once you initiate the withdrawal, there is a minimum 7-day withdrawal
+      period for networks like Arbitrum One and Nova. During this period, you
+      will have to wait for your funds to be transferred back to the parent
+      chain.
+
+
+      #### Claim your funds
+
+
+      After the withdrawal period is over, switch to the destination network on
+      your wallet and press the "Claim" button to receive your funds. Make sure
+      to check the status of your withdrawal in the Transactions tab of your
+      profile.
     name: Bridging using Arbitrum Bridge
     stepItems: []
     uuid: 06491485-bc66-48d4-8cde-1402be4a4aa1
