update guide Arbitrum Bridge

--- a/src/guides/main/arbitrum-bridge-arbitrum-university-959.yaml
+++ b/src/guides/main/arbitrum-bridge-arbitrum-university-959.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Arbitrum Bridge: Seamless L1 to L2 Asset Transfer'
-created: '2023-11-02T18:32:58.685Z'
+created: '2023-11-03T10:51:06.812Z'
 guideType: onboarding
 key: arbitrum-bridge-arbitrum-university-959
 name: 'Arbitrum Bridge '
@@ -91,6 +91,19 @@ steps:
       Layer 2 counterpart, Arbitrum One. This bridge acts as a crucial link,
       enabling assets to move seamlessly between these two layers while
       maintaining interoperability.
+
+
+      The Arbitrum Bridge offers enhanced scalability by offloading Ethereum's
+      computational load, enabling faster and more cost-effective transactions
+      through batch processing. Its security is rooted in Ethereum's proven
+      model, with additional checks and the ability for users to contribute as
+      validators. The bridge's user-friendly interface simplifies asset
+      transfer, improving the user experience for both novices and experts in
+      the crypto realm. It fosters interoperability, allowing assets to move
+      across various blockchain networks, thereby broadening user engagement
+      with diverse applications. Lastly, its cost efficiency is a standout
+      feature, slashing transaction fees and promoting a sustainable blockchain
+      environment.
 
 
       ## Purpose of Arbitrum Bridge
